--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  background-color: var(--orange);
+  background-color: blue;
   color: var(--tan-1);
   font-size: 2.7vmin;
   border: .6vmin solid var(--tan-2); 
